# gir-test

sourceview/: Cargo.toml
sourceview/sourceview-sys/: Cargo.toml  Gir.toml  build.rs
sourceview/sourceview-sys/src/: lib.rs
sourceview/sourceview-sys/tests/: abi.rs  constant.c  layout.c
