[package]
name = "gtk-source-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
[package.metadata.system-deps.gtksourceview_3_0]
name = "gtksourceview-3.0"
version = "3"

[package.metadata.system-deps.gtksourceview_3_0.v3_4]
version = "3.4"

[package.metadata.system-deps.gtksourceview_3_0.v3_8]
version = "3.8"

[package.metadata.system-deps.gtksourceview_3_0.v3_10]
version = "3.10"

[package.metadata.system-deps.gtksourceview_3_0.v3_12]
version = "3.12"

[package.metadata.system-deps.gtksourceview_3_0.v3_14]
version = "3.14"

[package.metadata.system-deps.gtksourceview_3_0.v3_16]
version = "3.16"

[package.metadata.system-deps.gtksourceview_3_0.v3_18]
version = "3.18"

[package.metadata.system-deps.gtksourceview_3_0.v3_20]
version = "3.20"

[package.metadata.system-deps.gtksourceview_3_0.v3_22]
version = "3.22"

[package.metadata.system-deps.gtksourceview_3_0.v3_24]
version = "3.24"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gtk_source_sys"

[dependencies]
libc = "0.2"
cairo-rs = { git  = "https://github.com/gtk-rs/gtk-rs-core" }
gdk = { git  = "https://github.com/gtk-rs/gtk3-rs" }
gdk-pixbuf = { git  = "https://github.com/gtk-rs/gtk-rs-core" }
gio = { git  = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git  = "https://github.com/gtk-rs/gtk-rs-core" }
gobject-sys = { git  = "https://github.com/gtk-rs/gtk-rs-core" }
gtk = { git  = "https://github.com/gtk-rs/gtk3-rs" }



#[dependencies.cairo-sys-rs]
#git = "https://github.com/gtk-rs/gtk-rs-core"

#[dependencies.gdk-sys]
#git = "https://github.com/gtk-rs/gtk3-rs"

#[dependencies.gdk-pixbuf-sys]
#git = "https://github.com/gtk-rs/gtk-rs-core"

#[dependencies.gio-sys]
#git = "https://github.com/gtk-rs/gtk-rs-core"

#[dependencies.glib-sys]
#git = "https://github.com/gtk-rs/gtk-rs-core"

#[dependencies.gobject-sys]
#git = "https://github.com/gtk-rs/gtk-rs-core"

#[dependencies.gtk-sys]
#git = "https://github.com/gtk-rs/gtk3-rs"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v3_4 = []
v3_8 = ["v3_4"]
v3_10 = ["v3_8"]
v3_12 = ["v3_10"]
v3_14 = ["v3_12"]
v3_16 = ["v3_14"]
v3_18 = ["v3_16"]
v3_20 = ["v3_18"]
v3_22 = ["v3_20"]
v3_24 = ["v3_22"]
dox = []
